GET API Testing on HTTP Server

--- a/umash.conf
+++ b/umash.conf
@@ -1,4 +1,4 @@
 adminflag 1
-serverRoot ~/home/jash/Desktop/HTTP Server/http-server
+serverRoot ~/home/jash/Desktop/STQA
 MaxKeepAliveRequests 100
 ErrorLog error.log
